WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255065
REGRESSION (Safari 16.4): "box-decoration-break: clone" with "padding-right" wraps inline content unexpectedly
https://bugs.webkit.org/show_bug.cgi?id=255065
Summary
REGRESSION (Safari 16.4): "box-decoration-break: clone" with "padding-right" ...
zalan
Reported
2023-04-05 16:38:16 PDT
see
bug 255036
Attachments
Patch
(6.50 KB, patch)
2023-04-05 16:47 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(7.21 KB, patch)
2023-04-05 18:01 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-05 16:38:35 PDT
<
rdar://problem/107684833
>
zalan
Comment 2
2023-04-05 16:47:11 PDT
Created
attachment 465788
[details]
Patch
zalan
Comment 3
2023-04-05 18:01:14 PDT
Created
attachment 465790
[details]
[fast-cq]Patch
EWS
Comment 4
2023-04-05 19:26:58 PDT
Committed
262652@main
(1200e59015c2): <
https://commits.webkit.org/262652@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 465790
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug